# BleHelper

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cmake/: BuildConfig.h.in  GetVersionFromGit.cmake  InstallerScript.iss.in  resource.rc.in
.github/workflows/: linux.yml  windows.yml
BleHelper/: CMakeLists.txt
BleHelper/qml/: main.qml  qmldir
BleHelper/qml/components/: FilterPopup.qml  RenameAttributePopup.qml  WriteCharacteristicPopup.qml
BleHelper/qml/controls/: MyFluColorPicker.qml  MyFluComboBox.qml  MyFluCopyableText.qml  MyFluExpander.qml  MyFluIcon.qml  MyFluIconButton.qml  MyFluNestedPageView.qml  MyFluPivot.qml  MyFluPopup.qml  MyFluProgressBar.qml  MyFluTextBox.qml  MyFluTextBoxMenu.qml  MyFluTextButton.qml
BleHelper/qml/models/: GlobalModel.qml
BleHelper/qml/pages/: BluetoothClientPage.qml  ConnectionPage.qml  DetailsPage.qml  ManageFavoritesPage.qml  ManageUuidDictionaryPage.qml  ScannerPage.qml  SettingsPage.qml
BleHelper/qml/windows/: CrashWindow.qml  MainWindow.qml  NewWindow.qml
BleHelper/resources/fonts/: README.md
BleHelper/resources/images/icons/: logo.ai
BleHelper/resources/translations/: en_US.ts  languages.json  zh_CN.ts
BleHelper/src/: main.cpp
BleHelper/src/ble/: CharacteristicInfo.cpp  CharacteristicInfo.h  ClientManager.cpp  ClientManager.h  DescriptorInfo.cpp  DescriptorInfo.h  DeviceInfo.cpp  DeviceInfo.h  FilterParams.cpp  FilterParams.h  ServiceInfo.cpp  ServiceInfo.h
BleHelper/src/common/: ApplicationInfo.cpp  ApplicationInfo.h  BaseClass.cpp  BaseClass.h  BuildConfig.h  SettingsManager.cpp  SettingsManager.h  Utils.cpp  Utils.h
